# torch-dag

./: .gitattributes  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  VERSION  compile_docker_requirements.sh  pyproject.toml  release.sh  requirements-dev.txt  requirements.txt  setup.py
.github/: dependabot.yml
dev_tools/: __init__.py  algorithms_testing_tools.py  constants.py  model_loading.py  model_size.json  model_test_results.json  model_test_results_v0.json  supported_models.ipynb  test_model.py  testing.py  testing_result_registry.py  timeout.py  update_model_size.py
docker/: Dockerfile  build_docker_image_locally.sh  requirements-docker.txt  requirements.txt
node_api_conversion/: convert_cell_to_dag_module.py  convert_dag_module_to_cell.py  from_nd_converter.py  to_nd_converter.py  utils.py
resources/: channel_pruning_supported_models_table.md  conversion_to_dag_module.md  pruning_plots.ipynb  pruning_readme.md  pruning_results.md  supported_models_table.md
tests/: conftest.py  test_constants.py  test_custom_module_handling.py  test_dag_compile.py  test_flops_computation.py  test_load_optimized.py  test_regular_tracing.py  test_serialization.py  test_timm.py  test_timm_extended_orbitalization.py  test_torch_compile.py  test_utils.py
torch_dag/: __init__.py  structured_modules.py
torch_dag/api/: io.py  (+5 more)
torch_dag_algorithms/: __init__.py  cli.py
torch_dag_timm_plugin/: channel_removal.py  constants.py  mask_propagation.py  modified_timm_modules.py  module_conversion.py  module_multipliers.py  timm_flops_computation.py  timm_modules_handling.py
(+72 files in other folders)
